@@ -270,3 +270,28 @@ int epl_compress_row(typ_stream *stream,
     }
   return stream->count ;
 }
+
+
+/* hard-coded blank stripe put here for efficiency */
+static unsigned char blank_stripe[] = {
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+};
+
+
+void make_blank(typ_stream *stream)
+{
+  int idx = 0; 
+  stream->count = 104;
+  for (idx = 0 ; idx < 104; idx++)
+    {
+      *(stream->start + idx) = blank_stripe[idx];
+    }
+  return;
+}
