@@ -1,3 +1,6 @@
+2004-09-25: cvs - Hin-Tak Leung
+   . more work on "print as much as possible on low mem".	
+	
 2004-09-23: cvs - Hin-Tak Leung
    . Documentation and script addition about flowcontrol=nowhere
    . rough work on "print as much as possible on low mem". Also
